# gcapslab-hermeshq

./: .dockerignore  .env.example  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  README.md  VERSION  docker-compose.yml  install.sh
backend/: Dockerfile  alembic.ini  pyproject.toml  requirements.txt  runtime-entrypoint.sh  runtime.Dockerfile
backend/hermes-agent-patches/: 0001-reload-mcp-from-config.patch  README.md
backend/hermeshq/: config.py  database.py  main.py  versioning.py
backend/hermeshq/alembic/: env.py
backend/hermeshq/cli/: __init__.py  rotate_secrets.py
backend/hermeshq/core/: combined_auth.py  events.py  pagination.py  request_logging.py  security.py  structured_errors.py  supabase_auth.py
backend/hermeshq/models/: __init__.py  activity.py  agent.py  agent_assignment.py  app_settings.py  audit_log.py  base.py  container.py  enums.py  integration_draft.py  mcp_access.py  message.py  messaging_channel.py  mfa_code.py  node.py  organization.py  password_reset.py  task.py  (+5 more)
backend/scripts/: mint_admin_token.py
backend/tests/: test_agent_identity.py  test_auth_rate_limit.py  test_auth_refresh.py  test_avatar.py  test_channel_routing.py  test_containers_removed.py  test_containers_runtime.py  test_desktop_runtime.py  test_events.py  test_gateway_supervisor_crash_loop.py  test_media_parser.py  test_migration_check_constraints.py  test_nous_provider.py  test_pagination.py  test_regressions.py  test_request_logging.py  test_resource_monitor.py  test_response_attachments.py  test_secret_vault.py  test_security.py  test_structured_errors.py  test_supabase_auth.py  test_users_update.py  test_versioning.py
(+269 files in other folders)
