[project]
name = "hermeshq-backend"
version = "2026.5.22.1"
requires-python = ">=3.11"

# ── Ruff ────────────────────────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]
ignore = [
    "E501",   # line too long — handled by formatter
    "E402",   # module level import not at top — common in FastAPI lazy imports
    "B008",   # function call in default argument (FastAPI Depends)
    "B904",   # raise from — lo aplicamos gradualmente
    "B905",   # zip() without strict= — too noisy for existing code
    "SIM102", # if-else in try-except — readability preference
    "SIM105", # contextlib.suppress — readability preference
    "SIM108", # ternary instead of if-else — readability preference
    "SIM115", # context manager for file handles — too many false positives
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["B017"]
"alembic/*" = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

# ── Mypy ────────────────────────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = false
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
check_untyped_defs = true
ignore_missing_imports = true
exclude = ["alembic/versions/"]

# ── Pytest ──────────────────────────────────────────────────────────────────
[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
